2007-07-10  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.3.0

2007-07-06  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_encrypted_wpa_psk): function to get encrypted
	psk.
	(set_debian_key): use it here.

2007-07-06  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_available_encryptions): add wpa to plain
	debian too.

2007-07-05  Carlos Garnacho  <carlosg@gnome.org>

	Added WPA/WPA2 PSK wireless encryption support (wext driver), at the
	moment just for debian like distros (specifically ubuntu >= 7.04). 
	Fixes GNOME bug #161376

	* Network/Ifaces.pm (get_debian_key_type) (set_debian_key)
	(set_debian_essid): Added , unified functions for handling essid/key
	for wep/wpa.
	(get_interface_parse_table) (get_interface_replace_table): use these 
	functions.
	(get_available_encryptions): add wpa-psk and wpa2-psk for ubuntu.

	* Utils/Platform.pm (ensure_distro_map): Add Gutsy to the list.

2007-07-05  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_modem_volume) (get): change a couple of
	default values that make more sense for uninitialized modem devices.

2007-07-05  Carlos Garnacho  <carlosg@gnome.org>

	* dispatcher/dispatcher.c (get_destination): be more paranoid checking
	the destination path before creating the forwarded copy.
	(dispatch_stb_message): do not leak the copy if there was something
	wrong with the destination.

2007-04-09  Carlos Garnacho  <carlosg@gnome.org>

	* Utils/Parse.pm (split_all_array_with_pos): only push non empty
	values. Improves GNOME bug #420213.

2007-04-08  Carlos Garnacho  <carlosg@gnome.org>

	* Net-DBus/Makefile.am: improve uninstall rules. Suggested by
	Joseph E. Sacco  <jsacco@gnome.org>
	* configure.in: make netdbusdir equal to modulesdir if none is
	specified.
	* HostsConfig.pm: remove print.

2007-04-03  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.2.1

2007-04-03  Carlos Garnacho  <carlosg@gnome.org>

	* Net-DBus/lib/Net/DBus.pm: do not use nonexistent